--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@carbon/charts-svelte": "^1.13.6",
     "@google-web-components/google-chart": "^5.0.5",
     "@tauri-apps/api": "^1.4.0",
     "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
+    "d3-cloud": "^1.2.7",
+    "d3-sankey": "^0.12.3",
     "googleapis": "^126.0.1",
+    "mdbsvelte": "^1.0.12",
     "readline": "^1.3.0",
     "svelte-chartjs": "^3.1.2"
   },
