--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,10 +13,18 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
+google-sheets4 = { version = "5.0" }
+yup-oauth2 = { version = "8.0" }
+hyper = { version = "0.14" }
+hyper-rustls = { version = "0.24" }
+
 tauri = { version = "1.4", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
 
+rand = "0.8"
+chrono = "0.4"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
