--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,8 @@ tokio = { version = "1", features = ["full"] }
 rand = "0.8"
 chrono = "0.4"
 
+dotenvy = { version = "0.15" }
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
